@@ -84,12 +84,18 @@ public class FileSet {
     }
 
     public void setDir(File dir) throws BuildException {
-        if (!dir.exists()) {
-            throw new BuildException(dir.getAbsolutePath()+" not found.");
-        }
-        if (!dir.isDirectory()) {
-            throw new BuildException(dir.getAbsolutePath()+" is not a directory.");
-        }
+        /*
+         * XXX cannot check as long as tasks get configured at parse time.
+         *
+         * the build process might create the directory.
+         */
+
+//        if (!dir.exists()) {
+//            throw new BuildException(dir.getAbsolutePath()+" not found.");
+//        }
+//        if (!dir.isDirectory()) {
+//            throw new BuildException(dir.getAbsolutePath()+" is not a directory.");
+//        }
         this.dir = dir;
     }
 
@@ -176,6 +182,17 @@ public class FileSet {
      * Returns the directory scanner needed to access the files to process.
      */
     public DirectoryScanner getDirectoryScanner(Project p) {
+        /*
+         * XXX remove the check here and enable the one in setDir as soon
+         *     as we configure tasks at execution time.
+         */
+        if (!dir.exists()) {
+            throw new BuildException(dir.getAbsolutePath()+" not found.");
+        }
+        if (!dir.isDirectory()) {
+            throw new BuildException(dir.getAbsolutePath()+" is not a directory.");
+        }
+
         DirectoryScanner ds = new DirectoryScanner();
         ds.setBasedir(dir);
 
